kubernetes/media/transmission/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: transmission
  labels:
    name: transmission
