kubernetes/media/transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
spec:
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: linuxserver/transmission
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: config
          mountPath: /config
        - name: watch
          mountPath: /watch
        ports:
        - containerPort: 9091
          name: transmission-ui
      volumes:
      - name: downloads
        hostPath:
          path: /array/transmission/downloads
          type: DirectoryOrCreate
      - name: config
        hostPath:
          path: /array/transmission/config
          type: DirectoryOrCreate
      - name: watch
        hostPath:
          path: /array/transmission/watch
          type: DirectoryOrCreate
