kubernetes/media/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-ui
  namespace: transmission
spec:
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
