kubernetes/media/transmission/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: transmission
  namespace: transmission
spec:
  rules:
  - host: transmission.raspberrypi.lab
    http:
      paths:
      - backend:
          serviceName: transmission-ui
          servicePort: 9091
